--- a/EOG/segmentation.ipynb
+++ b/EOG/segmentation.ipynb
@@ -15,71 +15,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[-3.90393448e+00, -2.60749378e+01, -3.24774218e+00, ...,\n",
-       "          3.23517823e+00,  1.83841717e+00,  1.85505543e+01],\n",
-       "        [-3.10271597e+00,  1.09141512e+01,  9.76041126e+00, ...,\n",
-       "         -7.54746771e+00, -6.57333136e-01,  2.51514721e+01],\n",
-       "        [-7.00262547e+00, -1.31661568e+01, -1.79386640e+00, ...,\n",
-       "         -4.62527800e+00,  2.16235962e+01, -3.07737613e+00],\n",
-       "        [ 1.54577675e+01,  4.22393894e+00,  2.06021190e+00, ...,\n",
-       "         -1.90858040e+01,  7.59409952e+00, -6.39791906e-01]],\n",
+       "array([[[  9.715339  ,  15.959176  ,  16.09355   , ..., -14.468535  ,\n",
+       "          22.011942  ,  -2.2860115 ],\n",
+       "        [  1.083166  ,   4.8331575 ,  -3.8758605 , ...,   7.46218   ,\n",
+       "           6.7929797 ,   3.5564976 ],\n",
+       "        [-16.891994  ,  -1.0153096 ,  21.34562   , ...,   6.7818613 ,\n",
+       "          19.03512   ,  20.873432  ],\n",
+       "        [ 15.34505   ,   9.304999  ,  -0.73898715, ...,  22.92291   ,\n",
+       "           1.3304133 ,   3.2307098 ]],\n",
        "\n",
-       "       [[ 1.33389962e+00, -1.37301931e+01, -3.43953633e+00, ...,\n",
-       "          7.52064371e+00,  5.72106028e+00,  5.33696461e+00],\n",
-       "        [ 5.54165077e+00,  7.98749971e+00,  1.11764002e+00, ...,\n",
-       "         -2.96858096e+00, -6.41626644e+00, -1.29623423e+01],\n",
-       "        [ 4.67923307e+00,  4.42317486e+00, -1.88987617e+01, ...,\n",
-       "          1.35019741e+01,  4.82803440e+00, -1.33640742e+00],\n",
-       "        [ 3.85384202e+00,  1.11449318e+01,  3.58403754e+00, ...,\n",
-       "         -1.84753168e+00, -1.00824518e+01, -2.21215267e+01]],\n",
+       "       [[  9.850015  , -13.348989  ,   1.592202  , ...,  20.787218  ,\n",
+       "           5.7125893 ,  -5.8822246 ],\n",
+       "        [  4.692102  , -15.622506  , -19.8213    , ...,  -5.0602646 ,\n",
+       "          -7.136052  ,  30.987583  ],\n",
+       "        [  4.0775924 ,  -1.9215442 ,   4.3385696 , ...,   9.433404  ,\n",
+       "           5.5496564 ,  -6.9395437 ],\n",
+       "        [ 10.467308  , -10.872599  ,   0.91100365, ...,  -4.573705  ,\n",
+       "           4.071464  ,  -4.3732624 ]],\n",
        "\n",
-       "       [[ 8.67342186e+00,  1.96369915e+01,  1.79793835e+01, ...,\n",
-       "         -1.00006475e+01,  4.08415890e+00, -2.38892984e+00],\n",
-       "        [ 1.55402145e+01, -7.90585899e+00,  3.72103810e+00, ...,\n",
-       "          2.27708721e+00,  3.05738163e+00, -7.58011866e+00],\n",
-       "        [-1.13008738e+01, -1.28213463e+01, -1.21003494e+01, ...,\n",
-       "          2.05028744e+01, -1.54431543e+01,  2.42077675e+01],\n",
-       "        [ 4.48897314e+00,  1.10209188e+01,  1.23253202e+01, ...,\n",
-       "          1.11066923e+01, -5.52557373e+00,  8.78953171e+00]],\n",
+       "       [[ 15.481944  ,   7.8538375 ,  -8.373309  , ...,  -4.678457  ,\n",
+       "          -0.60716796,  -0.66716206],\n",
+       "        [ -8.829713  , -17.86809   ,  -6.551631  , ...,  11.708106  ,\n",
+       "           5.1450553 ,   2.1695776 ],\n",
+       "        [-13.580773  ,   1.5725925 ,  11.894762  , ...,  10.462904  ,\n",
+       "          -7.3918567 ,  10.660796  ],\n",
+       "        [ 10.072743  ,  10.749655  ,  -0.4306082 , ...,  -8.396132  ,\n",
+       "          -9.00853   ,   2.9685285 ]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[ 8.04677868e+00,  4.65664864e+00, -1.58387051e+01, ...,\n",
-       "         -2.21036739e+01, -1.22824411e+01, -3.92293036e-01],\n",
-       "        [ 6.21989965e+00,  1.60010648e+00,  1.42589605e+00, ...,\n",
-       "          1.06389103e+01,  1.69790406e-02, -6.87629986e+00],\n",
-       "        [-5.49492693e+00,  2.03135562e+00, -1.60287304e+01, ...,\n",
-       "          5.65243483e+00,  5.99308634e+00, -4.61190081e+00],\n",
-       "        [ 1.06510229e+01, -7.31094885e+00, -3.62301040e+00, ...,\n",
-       "          1.21874380e+01, -4.85772371e+00, -1.91752160e+00]],\n",
+       "       [[ -1.6356448 ,  -7.711532  ,   3.742058  , ...,   4.934714  ,\n",
+       "          -0.14608762, -11.566593  ],\n",
+       "        [ -9.094999  ,  11.708232  ,   9.238179  , ...,  15.499494  ,\n",
+       "           4.988911  ,  -7.751409  ],\n",
+       "        [  3.435312  ,   2.2313237 ,  -5.1469717 , ...,  -5.2258606 ,\n",
+       "          13.666103  ,   6.470628  ],\n",
+       "        [ 11.405747  ,   3.2281332 ,  -9.952205  , ...,  -7.494364  ,\n",
+       "         -13.143725  ,  12.543229  ]],\n",
        "\n",
-       "       [[ 1.20024359e+00,  1.24432859e+01, -1.14118862e+01, ...,\n",
-       "         -1.16111107e+01, -3.64541936e+00,  1.97450113e+00],\n",
-       "        [-1.80878391e+01,  7.43913317e+00, -7.82935238e+00, ...,\n",
-       "         -7.83226192e-01, -2.83170372e-01,  5.04509640e+00],\n",
-       "        [-1.76651611e+01,  7.98044777e+00, -1.90943050e+01, ...,\n",
-       "          8.31241131e+00,  4.38380051e+00,  1.51379490e+00],\n",
-       "        [-1.22912521e+01, -3.25996733e+00, -3.62899542e+00, ...,\n",
-       "         -1.40303450e+01,  3.54162693e+00, -4.64012480e+00]],\n",
+       "       [[  0.13935526, -10.35169   ,   4.2262692 , ..., -15.719245  ,\n",
+       "          12.036149  ,  13.116099  ],\n",
+       "        [ -3.9637105 ,   0.6677169 ,  23.44251   , ...,  23.844383  ,\n",
+       "          -5.447265  , -13.758984  ],\n",
+       "        [-19.944458  ,   1.0294243 ,   6.730165  , ...,  -3.3464303 ,\n",
+       "         -15.299154  ,   9.24416   ],\n",
+       "        [  0.34812635,   5.595474  ,  16.922293  , ...,  14.676968  ,\n",
+       "           7.7264767 ,   0.34650543]],\n",
        "\n",
-       "       [[ 1.02502871e+01,  1.61549549e+01, -1.67673664e+01, ...,\n",
-       "          1.94250755e+01, -1.54484816e+01, -5.41787100e+00],\n",
-       "        [-5.43977833e+00,  9.06128824e-01, -4.43633461e+00, ...,\n",
-       "          4.29491663e+00,  7.39071417e+00,  2.11349449e+01],\n",
-       "        [ 1.19117765e+01, -1.17846661e+01,  1.60921745e+01, ...,\n",
-       "          2.06703777e+01,  4.86800909e+00,  3.28012061e+00],\n",
-       "        [-1.86190243e+01, -6.74798250e+00,  2.76066136e+00, ...,\n",
-       "          1.39173374e+01, -2.08437347e+01, -9.37612534e+00]]],\n",
-       "      dtype=float32)"
+       "       [[ -0.4245859 ,   1.9996482 ,   8.026333  , ...,  -3.475041  ,\n",
+       "           3.581479  ,  -5.0629616 ],\n",
+       "        [ -0.20272434,   3.56953   ,   0.3310007 , ...,  -8.669937  ,\n",
+       "          -4.54379   ,  -0.8858639 ],\n",
+       "        [  0.36796913, -13.028523  ,  -0.43886527, ...,   8.068988  ,\n",
+       "           7.951915  ,  -8.075304  ],\n",
+       "        [ -9.472597  ,   4.0555034 ,  14.423966  , ..., -15.565875  ,\n",
+       "          16.714403  , -12.8986635 ]]], dtype=float32)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +149,7 @@
      "text": [
       " (60, 4, 1000)\n",
       "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (60, 4, 33, 65) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio do tempo: (60, 4, 33, 64) - (classes+ensaios, canais, janelas, linhas)\n",
       "Dominio da frequência:  (60, 4, 33, 33) - (classes+ensaios, canais, janelas, linhas)\n"
      ]
     }
@@ -166,7 +165,7 @@
     "\n",
     "while True:\n",
     "    # Cálculo de n_win e criação de ids\n",
-    "    n_win = int((data.shape[2] - segment) / (overlap_time + 1)) + 1\n",
+    "    n_win = int((data.shape[-1] - segment) / (overlap_time + 1)) + 1\n",
     "    ids = np.arange(n_win) * (overlap_time + 1)\n",
     "\n",
     "    # Janelas no domínio do tempo\n",
