--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
    ],
    "source": [
     "# Aplicação segmentação\n",
-    "data = filtered_data.reshape(data.shape[0] * data.shape[1], data.shape[2], data.shape[3])\n",
+    "data = filtered_data.reshape(filtered_data.shape[0] * filtered_data.shape[1], filtered_data.shape[2], filtered_data.shape[3])\n",
     "\n",
     "from scipy.signal import stft\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
