--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "#### Domínio da frequência\n",
     "\n",
-    "1. Median Frequency (FMD)\n",
+    "1. Median Frequency (FMD): energia média do sinal no domínio da frequência\n",
     "\n",
     "    > $ \\frac{1}{2}\\sum_{j=1}^{M}PSD_j $\n",
     "\n",
@@ -96,11 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from math import prod\n",
+    "import numpy as np\n",
     "\n",
     "# funções auxiliares\n",
     "def PSD(w):\n",
@@ -113,7 +115,7 @@
     "def var(x):\n",
     "    return np.sum(x ** 2, axis=-1) / (np.prod(x.shape) - 1)\n",
     "\n",
-    "def rms(x):\n",
+    "def rms(x): #faz produtótio de 56, 2, 33, 64\n",
     "    return np.sqrt(np.sum(np.abs(x) ** 2, axis=-1) / (np.prod(x.shape) - 1))\n",
     "\n",
     "def log_det(x):\n",
@@ -138,7 +140,7 @@
     "\n",
     "Ao final da implementação e seleção das características, deve ser escolhida as características e então teremos um vetor com todas elas implementadas.\n",
     "\n",
-    "O vetor de características estará organizado da seguinte forma (exemplo p/ VAR, RMS, RDM e MMDF):\n",
+    "O vetor de características estará organizado da seguinte forma (exemplo p/ VAR, RMS, RDM e MMDF) (1 e 2 porque são dois eletrodos)\n",
     "\n",
     "| ID sample | VAR1 | RMS1 | FMD1 | MMDF1 | VAR2 | RMS2 | FMD2 | MMDF2 | Classe |\n",
     "|:---------:|:----:|:----:|:----:|:-----:|------|------|------|-------|:------:|\n",
@@ -149,6 +151,151 @@
     "\n",
     "#### Implementação do vetor\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape dos vetores orinais (56, 2, 33, 33) (56, 2, 33, 64)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((56, 2, 33), (56, 2, 33), (56, 2, 33), (56, 2, 33))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "x = np.load(\"datasets/x.npy\")\n",
+    "w = np.load(\"datasets/w.npy\")\n",
+    "\n",
+    "print(\"Shape dos vetores orinais\", x.shape, w.shape)\n",
+    "\n",
+    "data_var = var(x)\n",
+    "data_rms = rms(x)\n",
+    "\n",
+    "data_fmd = fmd(w)\n",
+    "data_mmdf = mmdf(w)\n",
+    "\n",
+    "data_var.shape, data_rms.shape, data_fmd.shape, data_mmdf.shape\n",
+    "#56, 2, 33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 56, 2, 33)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# União do vetor de características inicial (concatenação de data)\n",
+    "\n",
+    "features = np.array([data_var, data_rms, data_fmd, data_mmdf])\n",
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1848, 8)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Organização das dimensões 56, 33, 4, 2\n",
+    "features = features.transpose(1, 3, 0, 2)\n",
+    "\n",
+    "# Criar vetor de características definitivo\n",
+    "features = features.reshape(features.shape[0] * features.shape[1], features.shape[2] * features.shape[3])\n",
+    "\n",
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1848"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Criação do vetor de labels\n",
+    "\n",
+    "labels_str = ['dir', 'esq', 'cima', 'baixo', 'cima', 'baixo', 'baixo', 'esq', 'dir', 'baixo', 'dir', 'dir', 'esq', 'cima', 'baixo', 'cima', 'esq', 'dir', 'cima', 'esq', 'baixo', 'esq','dir', 'esq', 'cima', 'dir', 'cima', 'baixo']\n",
+    "\n",
+    "# transformando para numérico\n",
+    "lab_dict = {'dir': 0, 'esq': 1, 'cima': 2, 'baixo': 3}\n",
+    "labels_num = [lab_dict[item] for item in labels_str]\n",
+    "\n",
+    "y = labels_num * int(features.shape[0] / len(labels_num))\n",
+    "len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aplicar normalização dos dados utilizando ferramentas já conhecidas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Seleção de característica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classificação"
    ]
   }
  ],
