--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,35 +91,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 28, 2, 1000)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Aplicando filtro 5-50Hz\n",
-    "filtered_data = butter_bandpass(data, 5, 50)"
+    "# Aplicação dos filtros\n",
+    "filtered_data = butter_notch(data, 60)\n",
+    "filtered_data = butter_bandpass(filtered_data, 5, 50)\n",
+    "filtered_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (56, 2, 1000)\n",
+      " (2, 28, 2, 1000)\n",
       "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (56, 2, 33, 64) - (classes+ensaios, canais, janelas, linhas)\n",
-      "Dominio da frequência:  (56, 2, 33, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+      "Dominio do tempo: (2, 28, 33, 2, 64) - (classes, ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (2, 28, 33, 2, 33) - (classes, ensaios, canais, janelas, linhas)\n"
      ]
     }
    ],
    "source": [
-    "# Aplicação segmentação\n",
-    "data = filtered_data.reshape(filtered_data.shape[0] * filtered_data.shape[1], filtered_data.shape[2], filtered_data.shape[3])\n",
     "\n",
-    "from scipy.signal import stft\n",
+    "# Aplicação segmentação\n",
+    "data = filtered_data\n",
     "\n",
     "step = 29\n",
     "segment = 64\n",
@@ -129,28 +141,28 @@
     "ids = np.arange(n_win) * step\n",
     "\n",
     "# Janelas do dado no dominio do tempo\n",
-    "chunks_time = np.array([data[:,:,k:(k + segment)] for k in ids]).transpose(1, 2, 0, 3)\n",
+    "chunks_time = np.array([data[:,:,:,k:(k + segment)] for k in ids]).transpose(1, 2, 0, 3, 4)\n",
     "\n",
     "# Janelas do dado no domínio da frequência\n",
-    "_, _, chunks_freq = stft(data, fs=200, nperseg=64, noverlap=32)\n",
+    "_, _, chunks_freq = signal.stft(data, fs=200, nperseg=segment, noverlap=32)\n",
     "chunks_freq = np.swapaxes(chunks_freq, 2, 3)\n",
     "\n",
     "print('Formato (shape) dos dados depois da divisão de janelas')\n",
-    "print(f'Dominio do tempo: {chunks_time.shape} - (classes+ensaios, canais, janelas, linhas)')\n",
-    "print(f'Dominio da frequência:  {chunks_freq.shape} - (classes+ensaios, canais, janelas, linhas)')"
+    "print(f'Dominio do tempo: {chunks_time.shape} - (classes, ensaios, canais, janelas, linhas)')\n",
+    "print(f'Dominio da frequência:  {chunks_freq.shape} - (classes, ensaios, canais, janelas, linhas)')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 33, 33) (2, 33, 33)\n",
-      "(2, 33, 64) (2, 33, 64)\n"
+      "(28, 33, 2, 33) (28, 33, 2, 33)\n",
+      "(28, 33, 2, 64) (28, 33, 2, 64)\n"
      ]
     }
    ],
@@ -170,19 +182,6 @@
     "\n",
     "np.save(\"datasets/p2_freq\", p2_freq)\n",
     "np.save(\"datasets/p2_time\", p2_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = chunks_freq\n",
-    "w = chunks_time\n",
-    "\n",
-    "np.save(\"datasets/x\", x)\n",
-    "np.save(\"datasets/w\", w)"
    ]
   }
  ],
