--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -267,8 +267,11 @@
     "lab_dict = {'dir': 0, 'esq': 1, 'cima': 2, 'baixo': 3}\n",
     "labels_num = [lab_dict[item] for item in labels_str]\n",
     "\n",
-    "y = labels_num * int(features.shape[0] / len(labels_num))\n",
-    "len(y)"
+    "#y = np.array([item] * int(features.shape[0] / len(labels_num)) for item in labels_num)\n",
+    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))\n",
+    "\n",
+    "for item in y:\n",
+    "    print(item)"
    ]
   },
   {
