--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,39 +155,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (56, 2, 33, 33) (56, 2, 33, 64)\n"
+      "Shape dos vetores orinais (28, 33, 2, 33) (28, 33, 2, 64)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((56, 2, 33), (56, 2, 33), (56, 2, 33), (56, 2, 33))"
+       "((28, 33, 2), (28, 33, 2), (28, 33, 2), (28, 33, 2))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "x = np.load(\"datasets/x.npy\")\n",
-    "w = np.load(\"datasets/w.npy\")\n",
+    "# Carregando dados dos participantes\n",
+    "x1 = np.load(\"datasets/p1_freq.npy\")\n",
+    "w1 = np.load(\"datasets/p1_time.npy\")\n",
     "\n",
-    "print(\"Shape dos vetores orinais\", x.shape, w.shape)\n",
+    "x1 = np.load(\"datasets/p2_freq.npy\")\n",
+    "w1 = np.load(\"datasets/p2_time.npy\")\n",
     "\n",
-    "data_var = var(x)\n",
-    "data_rms = rms(x)\n",
+    "print(\"Shape dos vetores orinais\", x1.shape, w1.shape)\n",
     "\n",
-    "data_fmd = fmd(w)\n",
-    "data_mmdf = mmdf(w)\n",
+    "data_var = var(x1)\n",
+    "data_rms = rms(x1)\n",
+    "\n",
+    "data_fmd = fmd(w1)\n",
+    "data_mmdf = mmdf(w1)\n",
     "\n",
     "data_var.shape, data_rms.shape, data_fmd.shape, data_mmdf.shape\n",
     "#56, 2, 33"
@@ -195,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 56, 2, 33)"
+       "(4, 28, 33, 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1848, 8)"
+       "(56, 132)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,39 +248,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1848"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 2, 3, 3, 1, 0, 3, 0, 0, 1, 2, 3, 2, 1, 0, 2, 1, 3, 1, 0, 1, 2, 0, 2, 3]\n"
+     ]
     }
    ],
    "source": [
-    "# Criação do vetor de labels\n",
-    "\n",
-    "labels_str = ['dir', 'esq', 'cima', 'baixo', 'cima', 'baixo', 'baixo', 'esq', 'dir', 'baixo', 'dir', 'dir', 'esq', 'cima', 'baixo', 'cima', 'esq', 'dir', 'cima', 'esq', 'baixo', 'esq','dir', 'esq', 'cima', 'dir', 'cima', 'baixo']\n",
+    "labels_str = ['dir', 'esq', 'cima', 'baixo', 'cima', 'baixo',\n",
+    "'baixo', 'esq', 'dir', 'baixo', 'dir', 'dir', 'esq', 'cima',\n",
+    "'baixo', 'cima', 'esq', 'dir', 'cima', 'esq', 'baixo', 'esq',\n",
+    "'dir', 'esq', 'cima', 'dir', 'cima', 'baixo']\n",
     "\n",
     "# transformando para numérico\n",
     "lab_dict = {'dir': 0, 'esq': 1, 'cima': 2, 'baixo': 3}\n",
     "labels_num = [lab_dict[item] for item in labels_str]\n",
     "\n",
-    "#y = np.array([item] * int(features.shape[0] / len(labels_num)) for item in labels_num)\n",
-    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))\n",
+    "print(labels_num)\n",
     "\n",
-    "for item in y:\n",
-    "    print(item)"
+    "# criação do vetor de labels final\n",
+    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
