--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,25 @@
     "    ''' definição da função PSD para o sinal no domínio da frequência '''\n",
     "    return np.abs(w) ** 2\n",
     "\n",
+    "def sign(x):\n",
+    "    return x[:-1] * x[1:]\n",
     "\n",
     "# funções de extração de características\n",
+    "def wamp(x, threshold):\n",
+    "    differences = np.abs(np.diff(x))\n",
+    "    return np.sum(differences > threshold)\n",
     "\n",
     "def var(x):\n",
     "    return np.sum(x ** 2, axis=-1) / (np.prod(x.shape) - 1)\n",
     "\n",
     "def rms(x): #faz produtótio de 56, 2, 33, 64\n",
     "    return np.sqrt(np.sum(np.abs(x) ** 2, axis=-1) / (np.prod(x.shape) - 1))\n",
+    "\n",
+    "def wl(x):\n",
+    "    return np.sum(np.abs(np.diff(x)), axis=-1)\n",
+    "\n",
+    "def zc(x):\n",
+    "    return np.sum(sign(x) <= 0, axis=-1)\n",
     "\n",
     "def log_det(x):\n",
     "    from math import e\n",
