descrição das funções

--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -80,9 +80,35 @@
     "\n",
     "\n",
     "\\[1\\] Phinyomark, Angkoon & Limsakul, Chusak & Phukpattaranont, P.. (2008). EMG Feature Extraction for Tolerance of White Gaussian Noise.\n",
-    "[Disponível neste link](https://www.researchgate.net/publication/263765853_EMG_Feature_Extraction_for_Tolerance_of_White_Gaussian_Noise)\n",
+    "[Disponível neste link](https://www.researchgate.net/publication/263765853_EMG_Feature_Extraction_for_Tolerance_of_White_Gaussian_Noise)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tarefa 1**: Descrever as características de acordo com o artigo citado e outros disponíveis relacionados. O que está querendo \"ser visto\" em cada característica? Qual é o significado matemático de cada uma delas?\n",
     "\n",
-    "**Tarefa 1**: Descrever as características de acordo com o artigo citado e outros disponíveis relacionados. O que está querendo \"ser visto\" em cada característica? Qual é o significado matemático de cada uma delas?"
+    "**Domínio do tempo**\n",
+    "- Willison Amplitude (WAMP): é uma medida estatística que quantifica a quantidade de variação absoluta em uma série temporal. Ela é frequentemente usada em análise de séries temporais para identificar mudanças abruptas ou picos. Essencialmente, o WAMP é calculado somando as diferenças absolutas entre pontos consecutivos na série temporal, excluindo o primeiro ponto, já que não há ponto anterior para comparar. Significado matemático: $N$ é o número total de pontos na série temporal; $x_i$​ é o valor da série temporal no tempo $t$; $x_{i−1​}$ é o valor da série temporal no tempo $i-1$ e $∣\\cdot∣$ denota o valor absoluto.\n",
+    "\n",
+    "- Variance of EMG (VAR): a variância (VAR) da amplitude do sinal eletromiográfico é uma medida estatística que quantifica a dispersão dos valores de amplitude no sinal EMG. A variância é uma medida de quão distantes os valores individuais do sinal estão da média. Se a variância for alta, isso indica que os valores individuais estão mais dispersos, enquanto uma variância baixa indica que os valores estão mais próximos da média. Significado matemático: $N$ e $x_i$ são, respectivamente, o comprimento e o enésimo valor amostral do sinal EMG.\n",
+    "\n",
+    "- Root Mean Square (RMS): a raiz quadrada da média dos quadrados é uma medida estatística utilizada para representar a magnitude de um conjunto de valores. No contexto de sinais, como o sinal eletromiográfico (EMG) ou de áudio, o RMS é frequentemente usado para quantificar a amplitude eficaz do sinal. Significado matemático: $N$ e $x_i$ são, respectivamente, o comprimento e o enésimo valor amostral do sinal EMG.\n",
+    "\n",
+    "- Waveform Length (WL): é uma medida que quantifica a complexidade ou o comprimento total de uma forma de onda. É frequentemente utilizada em análises de sinais, como sinais eletromiográficos (EMG) ou outros tipos de sinais biomédicos. A fórmula envolve calcular a soma das diferenças absolutas entre amostras consecutivas na forma de onda. Essa medida é sensível às variações locais na amplitude da forma de onda e pode ser usada para avaliar a complexidade ou rugosidade do sinal. Quanto mais irregularidades ou mudanças abruptas houver na forma de onda, maior será o valor do Waveform Length. Significado matemático: $N$ e $x_i$ são, respectivamente, o comprimento e o enésimo valor amostral do sinal EMG.\n",
+    "\n",
+    "- Zero Crossing (ZC): é uma medida utilizada para quantificar a frequência de mudanças de polaridade em um sinal, como uma forma de onda. Em sinais de áudio, por exemplo, um cruzamento por zero ocorre sempre que o sinal muda de positivo para negativo ou vice-versa. Em termos simples, um zero crossing é o ponto em que a amplitude de um sinal muda de sinal. Significado matemático: $N$ é o número total de amostras no sinal; $x_i$ representa cada amostra individual no sinal; $sign(x_i)$ é a função de sinal, que retorna $-1$ se $x_i$​ for negativo, $0$ se for zero e $1$ se for positivo.\n",
+    "\n",
+    "\n",
+    "**Domínio da frequência**\n",
+    "- Median Frequency (FMD): é a frequência na qual o espectro é dividido em duas regiões médias. Significado matemático: o $PSD$ aqui é entendido como $|w^2|$. \n",
+    "\n",
+    "- Mean Frequency (FMN): é uma medida da frequência média ponderada no espectro de potência do sinal. Ela é frequentemente usada para caracterizar a distribuição de energia em um sinal ao longo das diferentes frequências, fornecendo uma medida de centralidade das frequências predominantes no sinal. Significado matemático: o $PSD$ é entendido como $|w^2|$ e $f_j$ é o espectro de frequência no compartimento de frequência $j$.\n",
+    "\n",
+    "- Modified Median Frequency (MMDF): é a frequência na qual o espectro é dividido em duas regiões com amplitude igual. Significado matemático: $A_j$ é o espectro de amplitude do EMG diante da frequência $j$.\n",
+    "\n",
+    "- Modified Frequency Mean (MMNF): é estimado como a soma do produto do espectro de amplitude e frequência dividida pela soma total da intensidade do espectro. Significado matemático: $A_j$ e $f_j$ são o espectro de amplitude EMG e o espectro de frequência no compartimento de frequência $j$, respectivamente.\n"
    ]
   },
   {
@@ -96,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
