--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -117,12 +117,14 @@
    "source": [
     "#### Aplicando as características\n",
     "\n",
-    "É necessário implementar as características, geralmente em formato de funções ou métodos, para que seja possível aplicar tais funções aos dados de entrada e obter as características resultantes. A seguir temos a implementação das características `VAR` & `RMS` (domínio do tempo) e `FDM` & `MMDF` (domínio da frequência)."
+    "É necessário implementar as características, geralmente em formato de funções ou métodos, para que seja possível aplicar tais funções aos dados de entrada e obter as características resultantes. A seguir temos a implementação das características `VAR` & `RMS` (domínio do tempo) e `FDM` & `MMDF` (domínio da frequência).\n",
+    "\n",
+    "**Tarefa 2**: Implemente todas as características apresentadas neste tutorial em formato de funções. Sinta-se livre também para buscar e implementar características além das apresentadas, citando as fontes de tais características."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,19 +140,23 @@
     "def sign(x):\n",
     "    return x[:-1] * x[1:]\n",
     "\n",
+    "def func_j(w):\n",
+    "    sample_rate = np.arange(1, w.shape[-1]+1) * 200\n",
+    "    return sample_rate / 2 * w.shape[-1]\n",
+    "\n",
     "# funções de extração de características\n",
     "def wamp(x, threshold):\n",
     "    differences = np.abs(np.diff(x))\n",
-    "    return np.sum(differences > threshold)\n",
+    "    return np.sum(differences > threshold, axis=-1)\n",
     "\n",
     "def var(x):\n",
     "    return np.sum(x ** 2, axis=-1) / (np.prod(x.shape) - 1)\n",
     "\n",
-    "def rms(x): #faz produtótio de 56, 2, 33, 64\n",
+    "def rms(x):\n",
     "    return np.sqrt(np.sum(np.abs(x) ** 2, axis=-1) / (np.prod(x.shape) - 1))\n",
     "\n",
     "def wl(x):\n",
-    "    return np.sum(np.abs(np.diff(x)), axis=-1)\n",
+    "    return np.sum(np.abs(np.diff(x), axis=-1), axis=-1)\n",
     "\n",
     "def zc(x):\n",
     "    return np.sum(sign(x) <= 0, axis=-1)\n",
@@ -162,17 +168,20 @@
     "def fmd(w):\n",
     "    return np.sum(PSD(w), axis=-1) / 2\n",
     "\n",
+    "def fmn(w):\n",
+    "    return  np.sum(func_j(w)* PSD(w), axis=-1)/ fmd(w) * 2\n",
+    "\n",
     "def mmdf(w):\n",
-    "    return np.sum(np.abs(w), axis=-1) / 2"
+    "    return np.sum(np.abs(w), axis=-1) / 2\n",
+    "\n",
+    "def mmnf(w):\n",
+    "    return np.sum(func_j(w) * np.abs(w),  axis=-1) / mmdf(w) * 2\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tarefa 2**: Implemente todas as características apresentadas neste tutorial em formato de funções. Sinta-se livre também para buscar e implementar características além das apresentadas, citando as fontes de tais características.\n",
-    "\n",
-    "\n",
     "#### Vetor de características\n",
     "\n",
     "Ao final da implementação e seleção das características, deve ser escolhida as características e então teremos um vetor com todas elas implementadas.\n",
